[add&fix] 공지게시판 수정  - 공지 게시판 댓글 서비스 구현  - 알림 서비스 overflow 적용

--- a/documentation/css/light-dashboard.css
+++ b/documentation/css/light-dashboard.css
@@ -6217,7 +6217,7 @@ body {
   font-family: 'Muli', Arial, sans-serif;
 }
 body .wrapper {
-  min-height: 100vh;
+  min-height: 100%;
   position: relative;
 }
 body .wrapper:after {
@@ -10219,11 +10219,11 @@ star {
 .wrapper {
   position: relative;
   top: 0;
-  height: 100vh;
+  height: 100%;
 }
 .wrapper.wrapper-full-page {
   height: auto;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .full-page:after, .full-page:before {
